# life-os

./: .env.example  .gitignore  AGENTS.md  README.md  config.example.toml  package.json  pyproject.toml  tsconfig.json
docs/: architecture.md  conformance-matrix.md  email-calendar-integrations.md  findings-and-actions.md  operations.md  prototype-changelog.md  roadmap-completion.md  token-efficiency-inventory.md  ui-implementation-plan.md
iphone/: README.md
python/: redact_sensitive.py
src/: cli.ts  config.ts
tests/: attention-feedback.test.ts  attention-presentation.test.ts  attention-resolver.test.ts  attention-review.test.ts  authorization.test.ts  calendar-ingest.test.ts  config-security.test.ts  context.test.ts  db.test.ts  doctor.test.ts  effect-registry.test.ts  email-task-proposal.test.ts  extraction-runner.test.ts  finding-attention.test.ts  finding-semantics.test.ts  finding-task-proposal.test.ts  findings.test.ts  frontmatter.test.ts  gmail-ingest.test.ts  imessage-ingest.test.ts  ingestion-run.test.ts  integration-registry.test.ts  local-roadmap-smoke.test.ts  markdown.test.ts  mcp-server.test.ts  model-gateway.test.ts  morning-briefing.test.ts  normalization.test.ts  policy-bootstrap.test.ts  post-extraction-refresh.test.ts  prepared-reasoning.test.ts  projection-contract.test.ts  prompt-contracts.test.ts  provider-subject-links.test.ts  reason-morning-briefing.test.ts  rebuild-state.test.ts  refresh-today.test.ts  repository-scope.test.ts  source-events.test.ts  source-subject-links.test.ts  (+8 more)
ui/: .gitignore  README.md  package.json  vite.config.ts
(+167 files in other folders)
