[project]
name = "life-os-privacy-harness"
version = "0.1.0"
requires-python = ">=3.14,<3.15"
dependencies = [
  "click==8.3.1",
  "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
  "presidio-analyzer==2.2.363",
  "presidio-anonymizer==2.2.363",
]

[tool.uv]
package = false
